# ridl

./: .gitignore  Cargo.toml  README.md
ridl/: Cargo.toml
ridl/src/: lib.rs  main.rs  prelude.rs  sample.rs
ridl/src/model/: REST_README.md  attr.rs  log.rs  mod.rs  rename.rs  rest.rs  skip.rs  span.rs  type.rs
ridl/src/render/: ridl1.rs
ridl/src/render/openapi3/: mod.rs  model.rs
ridl/src/render/openapi3/codegen/: mod.rs  response.rs
ridl/src/render/openapi3/model/: info.rs  media_type.rs  mod.rs  parameter.rs  request_body.rs  response.rs  schema.rs
ridl/src/render/swift5/: mod.rs
ridl/src/render/typescript4/: mod.rs
ridl/src/scan/: attr.rs  err.rs  mod.rs  span.rs  ty.rs
ridl/src/scan/ir/: _fn.rs  attr.rs  fn.rs  mod.rs  trait.rs  type.rs
ridl/tests/: mod.rs  rest.yaml  snapshot_output_images.sh
ridl/tests/images/error/: bad_sum_type.rs
ridl/tests/images/output/: openapi3  ridl1
ridl/tmp/openapi3/: spec.yaml
ridl/tmp/swift5/: main.swift
ridl_attrs/: Cargo.toml
ridl_attrs/src/: lib.rs
ridl_derive/: Cargo.toml
ridl_derive/src/: lib.rs
ridl_experiment/: Cargo.toml  README.md
ridl_experiment/sample/: Cargo.toml
ridl_experiment/sample/src/: lib.rs
ridl_experiment/src/: _main.rs  main.rs
ridl_experiment/src/live_parse/: mod.rs
ridl_experiment/src/scan2/model/: mod.rs
ridl_tests/: Cargo.toml
ridl_tests/tests/: full_cycle.sh  mod.rs  snapshot_output_images.sh
ridl_tests/tests/images/input/: rust1.rs
ridl_tests/tests/images/output/: openapi3  ridl1  swift5  typescript4
ridl_tests/tmp/: rust1.rs
ridl_tests/tmp/openapi3/: spec.yaml
ridl_tests/tmp/ridl1/: spec.yaml
ridl_tests/tmp/swift5/: main.swift
ridl_tests/tmp/typescript4/: index.ts
samples/: sample.rs  test_full_cycle.sh
src/: lib.rs  main.rs  prelude.rs  sample.rs  test.rs
src/model/: log.rs  mod.rs  rename.rs
src/render/: mod.rs
src/render/openapi3/: mod.rs  model.rs
src/render/swift5/: mod.rs  test.rs
src/render/typescript4/: mod.rs
src/scan/: mod.rs
tests/: full_cycle.sh  mod.rs  test_full_cycle.sh
tests/images/input/: rust1.rs
tests/images/output/: openapi3  ridl1  swift5  typescript4
